--- a/NLP小白入门/N7笔记.md
+++ b/NLP小白入门/N7笔记.md
@@ -49,5 +49,6 @@ class AttnDecoderRNN(nn.Module):
         result = Variable(torch.zeros(1, 1, self.hidden_size, device=device))
         return result
 ```
+后面即是使用分步的训练去训练编码器和解码器
 
 
